etc/iptables/ip6tables.rules
## As recommended by the Arch Wiki:  https://wiki.archlinux.org/index.php/Simple_stateful_firewall
## Copyright © by Miles Bradley Huff from 2016-2017 per the LGPL3 (the Third Lesser GNU Public License)


### DEFAULTS
*filter

## Default to dropping all incoming traffic
:INPUT DROP [0:0]

## Not a NAT;  drop forward packets.
:FORWARD DROP [0:0]

## Accept all outgoing traffic
:OUTPUT ACCEPT [0:0]

## Allow connections with these protocols
:TRAFFIC - [0:0]
:TCP - [0:0]
:UDP - [0:0]


### INPUT CHAIN

## Allow traffic for already accepted connections through
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

## Accept connections from the loopback device
-A INPUT -i lo -j ACCEPT

## Allow IPv6 in spite of the postceding rule
-A INPUT -p 41 -j ACCEPT

## Drop all invalid traffic
-A INPUT -m conntrack --ctstate INVALID -j DROP

## Allow IPv6 in spite of the preceding rule
-A INPUT -s fe80::/10 -p icmpv6 -j ACCEPT

## Accept new pings
-A INPUT -p ipv6-icmp --icmpv6-type 128 -m conntrack --ctstate NEW -j ACCEPT

## Attach TCP and UDP
-A INPUT -p tcp --syn -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP

## RFC-compliance
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable

## Reject unreachable traffic
-A INPUT -j REJECT --reject-with icmp-proto-unreachable

## Reverse path filter
-t raw -A PREROUTING -m rpfilter -j ACCEPT
-t raw -A PREROUTING -j DROP


### TRAFFIC CHAIN

## Port Knocking
## This makes it so that, in order to open an ssh connection to this machine, one must ping three ports in the correct order.
## The accepted sequence is 2055, 2290, 9468.
# -A INPUT -j TRAFFIC
# -A TRAFFIC -p icmp --icmp-type any -j ACCEPT
# -A TRAFFIC -m state --state ESTABLISHED,RELATED -j ACCEPT
# -A TRAFFIC -m state --state NEW -m tcp -p tcp --dport 22 -m recent --rcheck --seconds 30 --name SSH2 -j ACCEPT
# -A TRAFFIC -m state --state NEW -m tcp -p tcp -m recent --name SSH2 --remove -j DROP
# -A TRAFFIC -m state --state NEW -m tcp -p tcp --dport 2055 -m recent --rcheck --name SSH1 -j SSH-INPUTTWO
# -A TRAFFIC -m state --state NEW -m tcp -p tcp -m recent --name SSH1 --remove -j DROP
# -A TRAFFIC -m state --state NEW -m tcp -p tcp --dport 2290 -m recent --rcheck --name SSH0 -j SSH-INPUT
# -A TRAFFIC -m state --state NEW -m tcp -p tcp -m recent --name SSH0 --remove -j DROP
# -A TRAFFIC -m state --state NEW -m tcp -p tcp --dport 9468 -m recent --name SSH0 --set -j DROP
# -A SSH-INPUT -m recent --name SSH1 --set -j DROP
# -A SSH-INPUTTWO -m recent --name SSH2 --set -j DROP
# -A TRAFFIC -j DROP


### TCP/UDP CHAIN

## Allow SSH
-A TCP -p tcp --dport 22 -j ACCEPT

## Allow being a DNS server
# -A UDP -p udp --dport 53 -j ACCEPT

## Allow being a webserver
# -A TCP -p tcp --dport 80 -j ACCEPT
# -A TCP -p tcp --dport 443 -j ACCEPT


### COMMIT
COMMIT
